# tg-site-collector

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/tg_site_collector/: __init__.py  types.py
src/tg_site_collector/activities/: __init__.py  audit_activity.py  auth_activity.py  collect_activity.py  data_io_activity.py  guard_activity.py  nav_extract_activity.py  search_activity.py  tg_activity.py
src/tg_site_collector/agent_tools/: __init__.py  site_collector_tool.py
src/tg_site_collector/api/: __init__.py  app.py  credentials.py  keyword_lists.py  runs.py  trigger.py
src/tg_site_collector/common/: __init__.py  auth.py
src/tg_site_collector/services/: __init__.py  browser_pool.py  collector_core.py  keyword_library.py  keyword_lists.py  temporal_client.py  tg_client.py
src/tg_site_collector/telegram_bot/: __init__.py  b_module_router.py  bot.py  messages.py  user_mapping.py  welcome.py
src/tg_site_collector/workers/: __init__.py  site_collector_worker.py
src/tg_site_collector/workflows/: __init__.py  site_collector.py
